@@ -11657,17 +11657,24 @@ module gmsh
 
   !> Create a fillet edge between edges `edgeTag1' and `edgeTag2' with radius
   !! `radius'. The modifed edges keep their tag. If `tag' is positive, set the
-  !! tag explicitly; otherwise a new tag is selected automatically.
+  !! tag explicitly; otherwise a new tag is selected automatically. If
+  !! `pointTag' is positive, set the point on the edge at which the fillet is
+  !! created. If `reverse' is set, the normal of the plane through the two
+  !! planes is reversed before the fillet is created.
   function gmshModelOccFillet2D(edgeTag1, &
                                 edgeTag2, &
                                 radius, &
                                 tag, &
+                                pointTag, &
+                                reverse, &
                                 ierr)
     interface
     function C_API(edgeTag1, &
                    edgeTag2, &
                    radius, &
                    tag, &
+                   pointTag, &
+                   reverse, &
                    ierr_) &
       bind(C, name="gmshModelOccFillet2D")
       use, intrinsic :: iso_c_binding
@@ -11676,6 +11683,8 @@ module gmsh
       integer(c_int), value, intent(in) :: edgeTag2
       real(c_double), value, intent(in) :: radius
       integer(c_int), value, intent(in) :: tag
+      integer(c_int), value, intent(in) :: pointTag
+      integer(c_int), value, intent(in) :: reverse
       integer(c_int), intent(out), optional :: ierr_
     end function C_API
     end interface
@@ -11684,11 +11693,15 @@ module gmsh
     integer, intent(in) :: edgeTag2
     real(c_double), intent(in) :: radius
     integer, intent(in), optional :: tag
+    integer, intent(in), optional :: pointTag
+    logical, intent(in), optional :: reverse
     integer(c_int), intent(out), optional :: ierr
     gmshModelOccFillet2D = C_API(edgeTag1=int(edgeTag1, c_int), &
                            edgeTag2=int(edgeTag2, c_int), &
                            radius=real(radius, c_double), &
                            tag=optval_c_int(-1, tag), &
+                           pointTag=optval_c_int(-1, pointTag), &
+                           reverse=optval_c_bool(.false., reverse), &
                            ierr_=ierr)
   end function gmshModelOccFillet2D
 
