@@ -2,6 +2,8 @@
 hybrid meshes with pyramids; improved ONELAB parameter GUI; upgraded official
 binary builds with OCC 7.8.
 
+* Incompatible API changes: new optional arguments to occ/fillet2D
+
 4.13.1 (May 24, 2024): fix regression introduced in 4.13.0 when reading binary
 .msh files with post-processing data; new read-only Mesh.MinQuality updated
 after meshing pipeline; occ/addSurfaceFilling new defaults to degree=2 for
